[gd_scene load_steps=26 format=3 uid="uid://bpbpidb0ni6u6"]

[ext_resource type="Script" path="res://scripts/QRnum.gd" id="1_ncsex"]
[ext_resource type="Script" path="res://scripts/Text_limit.gd" id="2_0kynu"]
[ext_resource type="Script" path="res://scripts/add.gd" id="3_cggtu"]
[ext_resource type="Script" path="res://scripts/subtract.gd" id="4_1jgni"]
[ext_resource type="Script" path="res://scripts/Aspeakeradd.gd" id="5_sxv3k"]
[ext_resource type="Script" path="res://scripts/Aspeakersub.gd" id="6_7wxnx"]
[ext_resource type="Script" path="res://scripts/Ampadd.gd" id="7_rqr56"]
[ext_resource type="Script" path="res://scripts/Ampsub.gd" id="8_db3v0"]
[ext_resource type="Script" path="res://scripts/Sourceintakeadd.gd" id="9_50r4p"]
[ext_resource type="Script" path="res://scripts/Sourceintakesub.gd" id="10_8fexr"]
[ext_resource type="Script" path="res://scripts/Groundintakeadd.gd" id="11_0khct"]
[ext_resource type="Script" path="res://scripts/Groundintakesub.gd" id="12_nce5r"]
[ext_resource type="Script" path="res://scripts/AAttemptedadd.gd" id="15_33p6h"]
[ext_resource type="Script" path="res://scripts/Speakeradd.gd" id="15_agnhl"]
[ext_resource type="Script" path="res://scripts/AAttemptedsub.gd" id="16_inapv"]
[ext_resource type="Script" path="res://scripts/Speakersub.gd" id="16_y0jun"]
[ext_resource type="Script" path="res://scenes/Ampattadd.gd" id="17_glw2h"]
[ext_resource type="Script" path="res://scripts/csv exporter.gd" id="17_tvd87"]
[ext_resource type="Script" path="res://scripts/back button.gd" id="18_2bqcg"]
[ext_resource type="Texture2D" uid="uid://v2efkvr46wsk" path="res://resources/button.png" id="18_preh0"]
[ext_resource type="Script" path="res://scenes/ampattsub.gd" id="18_sppb3"]
[ext_resource type="Script" path="res://scripts/coral4add.gd" id="19_dotxe"]
[ext_resource type="Script" path="res://scenes/speakerattadd.gd" id="19_febcr"]
[ext_resource type="Script" path="res://scripts/coral4subtract.gd" id="20_8t3s4"]
[ext_resource type="Script" path="res://scenes/speakerattsub.gd" id="20_yoeih"]

[node name="UserInput" type="Node2D"]

[node name="Miscellaneous" type="Label" parent="."]
offset_left = 291.0
offset_top = 20.0
offset_right = 542.0
offset_bottom = 69.0
theme_override_font_sizes/font_size = 35

[node name="Team_Number" type="Label" parent="Miscellaneous"]
layout_mode = 0
offset_left = -274.0
offset_top = 68.286
offset_right = -21.0
offset_bottom = 118.286
theme_override_font_sizes/font_size = 35
text = "Team Number:"

[node name="Match_Number" type="Label" parent="Miscellaneous"]
layout_mode = 0
offset_left = -274.0
offset_top = 138.286
offset_right = -9.0
offset_bottom = 188.286
theme_override_font_sizes/font_size = 35
text = "Match Number:"

[node name="Alliance" type="Label" parent="Miscellaneous"]
layout_mode = 0
offset_left = -274.0
offset_top = 208.286
offset_right = -132.0
offset_bottom = 258.286
theme_override_font_sizes/font_size = 35
text = "Alliance:"

[node name="Auton" type="Label" parent="."]
offset_left = 224.0
offset_top = 334.0
offset_right = 475.0
offset_bottom = 383.0
theme_override_font_sizes/font_size = 35

[node name="Left Area" type="Label" parent="Auton"]
layout_mode = 0
offset_left = -165.0
offset_top = 226.0
offset_right = 86.0
offset_bottom = 275.0
theme_override_font_sizes/font_size = 35
text = "Left Area:"

[node name="AScores Attempted" type="Label" parent="Auton"]
layout_mode = 0
offset_left = -168.0
offset_top = 177.0
offset_right = 96.0
offset_bottom = 226.0
theme_override_font_sizes/font_size = 35
text = "Scores Attempted:"

[node name="Label" type="Label" parent="Auton"]
layout_mode = 0
offset_left = -167.0
offset_top = 53.0
offset_right = -122.0
offset_bottom = 76.0
theme_override_font_sizes/font_size = 37
text = "Coral:"

[node name="Teleop" type="Label" parent="."]
offset_left = 748.143
offset_top = 10.7143
offset_right = 999.143
offset_bottom = 59.7143
theme_override_font_sizes/font_size = 35

[node name="Amp Scores" type="Label" parent="Teleop"]
layout_mode = 0
offset_left = -147.0
offset_top = 67.0
offset_right = -26.0
offset_bottom = 168.0
theme_override_font_sizes/font_size = 35
text = "Coral 
Scores:"

[node name="Speaker Scores" type="Label" parent="Teleop"]
layout_mode = 0
offset_left = -149.143
offset_top = 221.286
offset_right = 114.857
offset_bottom = 270.286
theme_override_font_sizes/font_size = 35
text = "Algae Scores:"

[node name="Defense" type="Label" parent="Teleop"]
layout_mode = 0
offset_left = -152.143
offset_top = 291.286
offset_right = 98.857
offset_bottom = 340.286
theme_override_font_sizes/font_size = 35
text = "Defense:"

[node name="Label" type="Label" parent="Teleop/Defense"]
layout_mode = 0
offset_left = 199.0
offset_top = 1.99971
offset_right = 253.0
offset_bottom = 50.9997
theme_override_font_sizes/font_size = 35
text = "/10"

[node name="Ground Intake" type="Label" parent="Teleop"]
layout_mode = 0
offset_left = -156.143
offset_top = 342.286
offset_right = 114.857
offset_bottom = 391.286
theme_override_font_sizes/font_size = 35
text = "Ground Intakes:"

[node name="Source Intake" type="Label" parent="Teleop"]
layout_mode = 0
offset_left = -151.143
offset_top = 397.286
offset_right = 112.857
offset_bottom = 446.286
theme_override_font_sizes/font_size = 35
text = "Source Intakes:"

[node name="Label2" type="Label" parent="Teleop"]
layout_mode = 0
offset_left = 49.857
offset_top = 127.286
offset_right = 208.857
offset_bottom = 162.286
theme_override_font_sizes/font_size = 25
text = "3                    4"

[node name="Label" type="Label" parent="Teleop"]
layout_mode = 0
offset_left = -66.143
offset_top = 9.2857
offset_right = 217.857
offset_bottom = 32.2857
scale = Vector2(1.5, 1.5)
text = "Level:        1                     2                        "

[node name="End Game" type="Label" parent="."]
offset_left = 719.0
offset_top = 440.0
offset_right = 969.997
offset_bottom = 489.0
theme_override_font_sizes/font_size = 35

[node name="Robots on Chain" type="Label" parent="End Game"]
visible = false
layout_mode = 0
offset_left = -136.429
offset_top = 65.857
offset_right = 149.571
offset_bottom = 114.857
theme_override_font_sizes/font_size = 35
text = "Robots on Chain:"

[node name="Label" type="Label" parent="End Game/Robots on Chain"]
layout_mode = 0
offset_left = 318.0
offset_top = 6.0
offset_right = 358.0
offset_bottom = 55.0
theme_override_font_sizes/font_size = 35
text = "/2"

[node name="deep hang" type="Label" parent="End Game"]
layout_mode = 0
offset_left = -150.429
offset_top = 113.857
offset_right = 100.571
offset_bottom = 162.857
theme_override_font_sizes/font_size = 35
text = "Deep hang
"

[node name="Parked" type="Label" parent="End Game"]
layout_mode = 0
offset_left = -133.0
offset_top = 147.0
offset_right = 118.0
offset_bottom = 196.0
theme_override_font_sizes/font_size = 35
text = "Parked:"

[node name="QR_Number" type="Label" parent="."]
offset_left = 69.1429
offset_top = 297.714
offset_right = 236.143
offset_bottom = 336.714
theme_override_font_sizes/font_size = 28

[node name="Notes2" type="TextEdit" parent="QR_Number"]
layout_mode = 0
offset_left = 151.857
offset_top = -4.71399
offset_right = 472.857
offset_bottom = 62.286

[node name="Notes" type="Label" parent="QR_Number"]
layout_mode = 0
offset_left = -13.1429
offset_top = 6.28601
offset_right = 173.857
offset_bottom = 62.286
theme_override_font_sizes/font_size = 30
text = "Notes"

[node name="QRnum" type="Label" parent="QR_Number"]
visible = false
layout_mode = 0
offset_left = -68.1429
offset_top = -3.714
offset_right = 834.857
offset_bottom = 35.286
theme_override_font_sizes/font_size = 28
text = "0"
script = ExtResource("1_ncsex")

[node name="Tnum" type="TextEdit" parent="QR_Number"]
layout_mode = 0
offset_left = 226.0
offset_top = -211.714
offset_right = 365.0
offset_bottom = -143.714
theme_override_font_sizes/font_size = 35
script = ExtResource("2_0kynu")

[node name="Parked" type="CheckButton" parent="QR_Number"]
layout_mode = 0
offset_left = 638.857
offset_top = 295.286
offset_right = 682.857
offset_bottom = 319.286
scale = Vector2(2, 2)

[node name="Spotlit" type="CheckButton" parent="QR_Number"]
layout_mode = 0
offset_left = 703.857
offset_top = 196.286
offset_right = 747.857
offset_bottom = 220.286
scale = Vector2(2, 2)

[node name="Label" type="Label" parent="QR_Number/Spotlit"]
layout_mode = 0
offset_left = -92.5
offset_top = -0.5
offset_right = 18.5
offset_bottom = 48.5
theme_override_font_sizes/font_size = 19
text = "deep hang"

[node name="Robots_on_Chain" type="TextEdit" parent="QR_Number"]
visible = false
layout_mode = 0
offset_left = 811.857
offset_top = 140.286
offset_right = 841.857
offset_bottom = 197.286
theme_override_font_sizes/font_size = 35
script = ExtResource("2_0kynu")

[node name="Defense_Rating" type="TextEdit" parent="QR_Number"]
layout_mode = 0
offset_left = 681.0
offset_top = -2.00029
offset_right = 737.0
offset_bottom = 61.9997
theme_override_font_sizes/font_size = 35
script = ExtResource("2_0kynu")

[node name="Area_left" type="CheckButton" parent="QR_Number"]
layout_mode = 0
offset_left = 151.857
offset_top = 269.286
offset_right = 195.857
offset_bottom = 293.286
scale = Vector2(2, 2)

[node name="Mnum" type="TextEdit" parent="QR_Number"]
layout_mode = 0
offset_left = 226.0
offset_top = -141.714
offset_right = 292.0
offset_bottom = -70.714
theme_override_font_sizes/font_size = 35
shortcut_keys_enabled = false
script = ExtResource("2_0kynu")

[node name="Aamp" type="Label" parent="QR_Number"]
layout_mode = 0
offset_left = 128.857
offset_top = 94.286
offset_right = 168.857
offset_bottom = 117.286
theme_override_font_sizes/font_size = 37
text = "0"

[node name="Add" type="Button" parent="QR_Number/Aamp"]
layout_mode = 0
offset_left = 51.4286
offset_top = -4.0
offset_right = 79.4286
offset_bottom = 53.0
theme_override_font_sizes/font_size = 35
text = "+"
script = ExtResource("3_cggtu")

[node name="Subtract" type="Button" parent="QR_Number/Aamp"]
layout_mode = 0
offset_left = -30.8571
offset_top = -5.71429
offset_right = -2.85713
offset_bottom = 51.2857
theme_override_font_sizes/font_size = 35
text = "-"
script = ExtResource("4_1jgni")

[node name="Aspeaker" type="Label" parent="QR_Number"]
layout_mode = 0
offset_left = 128.857
offset_top = 159.286
offset_right = 152.857
offset_bottom = 208.286
theme_override_font_sizes/font_size = 35
text = "0"

[node name="Add" type="Button" parent="QR_Number/Aspeaker"]
layout_mode = 0
offset_left = 51.4286
offset_top = -4.0
offset_right = 79.4286
offset_bottom = 53.0
theme_override_font_sizes/font_size = 35
text = "+"
script = ExtResource("5_sxv3k")

[node name="Subtract" type="Button" parent="QR_Number/Aspeaker"]
layout_mode = 0
offset_left = -30.8571
offset_top = -5.71428
offset_right = -2.85713
offset_bottom = 51.2857
theme_override_font_sizes/font_size = 35
text = "-"
script = ExtResource("6_7wxnx")

[node name="algae" type="Label" parent="QR_Number/Aspeaker"]
layout_mode = 1
anchors_preset = -1
anchor_left = -0.707
anchor_top = -0.262
anchor_right = -0.707
anchor_bottom = -0.262
offset_left = -124.032
offset_top = 12.838
offset_right = -29.0319
offset_bottom = 62.838
theme_override_font_sizes/font_size = 36
text = "Algae"

[node name="Amp" type="Label" parent="QR_Number"]
layout_mode = 0
offset_left = 721.857
offset_top = -228.714
offset_right = 745.857
offset_bottom = -179.714
theme_override_font_sizes/font_size = 35
text = "0"

[node name="Add" type="Button" parent="QR_Number/Amp"]
layout_mode = 0
offset_left = 51.4286
offset_top = -4.0
offset_right = 79.4286
offset_bottom = 53.0
theme_override_font_sizes/font_size = 35
text = "+"
script = ExtResource("7_rqr56")

[node name="Subtract" type="Button" parent="QR_Number/Amp"]
layout_mode = 0
offset_left = -30.8571
offset_top = -5.71428
offset_right = -2.85713
offset_bottom = 51.2857
theme_override_font_sizes/font_size = 35
text = "-"
script = ExtResource("8_db3v0")

[node name="Source_Intake" type="Label" parent="QR_Number"]
layout_mode = 0
offset_left = 826.0
offset_top = 119.0
offset_right = 866.0
offset_bottom = 170.0
theme_override_font_sizes/font_size = 37
text = "0"

[node name="Add" type="Button" parent="QR_Number/Source_Intake"]
layout_mode = 0
offset_left = 51.4286
offset_top = -4.0
offset_right = 79.4286
offset_bottom = 53.0
theme_override_font_sizes/font_size = 35
text = "+"
script = ExtResource("9_50r4p")

[node name="Subtract" type="Button" parent="QR_Number/Source_Intake"]
layout_mode = 0
offset_left = -30.8571
offset_top = -5.71429
offset_right = -2.85715
offset_bottom = 51.2857
theme_override_font_sizes/font_size = 35
text = "-"
script = ExtResource("10_8fexr")

[node name="Ground_Intake" type="Label" parent="QR_Number"]
layout_mode = 0
offset_left = 826.0
offset_top = 58.0
offset_right = 866.0
offset_bottom = 109.0
theme_override_font_sizes/font_size = 37
text = "0"

[node name="Add" type="Button" parent="QR_Number/Ground_Intake"]
layout_mode = 0
offset_left = 51.4286
offset_top = -4.0
offset_right = 79.4286
offset_bottom = 53.0
theme_override_font_sizes/font_size = 35
text = "+"
script = ExtResource("11_0khct")

[node name="Subtract" type="Button" parent="QR_Number/Ground_Intake"]
layout_mode = 0
offset_left = -30.8571
offset_top = -5.71429
offset_right = -2.85715
offset_bottom = 51.2857
theme_override_font_sizes/font_size = 35
text = "-"
script = ExtResource("12_nce5r")

[node name="Speaker" type="Label" parent="QR_Number"]
layout_mode = 0
offset_left = 791.857
offset_top = -57.7143
offset_right = 815.857
offset_bottom = -8.71429
theme_override_font_sizes/font_size = 35
text = "0"

[node name="Add" type="Button" parent="QR_Number/Speaker"]
layout_mode = 0
offset_left = 51.4286
offset_top = -4.0
offset_right = 79.4286
offset_bottom = 53.0
theme_override_font_sizes/font_size = 35
text = "+"
script = ExtResource("15_agnhl")

[node name="Subtract" type="Button" parent="QR_Number/Speaker"]
layout_mode = 0
offset_left = -31.0
offset_top = -6.0
offset_right = -3.0
offset_bottom = 51.0
theme_override_font_sizes/font_size = 35
text = "-"
script = ExtResource("16_y0jun")

[node name="trap" type="CheckButton" parent="QR_Number"]
layout_mode = 0
offset_left = 502.857
offset_top = 237.286
offset_right = 653.857
offset_bottom = 268.286
scale = Vector2(2, 2)
text = "Shallow hang"
text_direction = 1

[node name="AllianceToggle" type="CheckButton" parent="QR_Number"]
layout_mode = 0
offset_left = 169.0
offset_top = -71.714
offset_right = 213.0
offset_bottom = -41.714
scale = Vector2(2, 2)

[node name="Red" type="Label" parent="QR_Number/AllianceToggle"]
layout_mode = 1
anchors_preset = -1
anchor_left = -0.707
anchor_top = -0.262
anchor_right = -0.707
anchor_bottom = -0.262
offset_left = 3.608
offset_top = 9.86
offset_right = 40.608
offset_bottom = 32.86
text = "Red"

[node name="Blue" type="Label" parent="QR_Number/AllianceToggle"]
layout_mode = 1
anchors_preset = -1
anchor_left = -0.707
anchor_top = -0.262
anchor_right = -0.707
anchor_bottom = -0.262
offset_left = 73.108
offset_top = 9.36
offset_right = 110.108
offset_bottom = 32.36
text = "Blue"

[node name="AAttempted" type="Label" parent="QR_Number"]
layout_mode = 0
offset_left = 335.857
offset_top = 217.286
offset_right = 359.857
offset_bottom = 266.286
theme_override_font_sizes/font_size = 35
text = "0"

[node name="Add" type="Button" parent="QR_Number/AAttempted"]
layout_mode = 0
offset_left = 51.0001
offset_top = -4.0
offset_right = 79.0001
offset_bottom = 53.0
theme_override_font_sizes/font_size = 35
text = "+"
script = ExtResource("15_33p6h")

[node name="Subtract" type="Button" parent="QR_Number/AAttempted"]
layout_mode = 0
offset_left = -35.9999
offset_top = -4.0
offset_right = -7.99988
offset_bottom = 53.0
theme_override_font_sizes/font_size = 35
text = "-"
script = ExtResource("16_inapv")

[node name="Ampatt" type="Label" parent="QR_Number"]
layout_mode = 0
offset_left = 865.857
offset_top = -227.714
offset_right = 889.857
offset_bottom = -178.714
theme_override_font_sizes/font_size = 35
text = "0"

[node name="Add" type="Button" parent="QR_Number/Ampatt"]
layout_mode = 0
offset_left = 51.4286
offset_top = -4.0
offset_right = 79.4286
offset_bottom = 53.0
theme_override_font_sizes/font_size = 35
text = "+"
script = ExtResource("17_glw2h")

[node name="Subtract" type="Button" parent="QR_Number/Ampatt"]
layout_mode = 0
offset_left = -30.8571
offset_top = -5.71428
offset_right = -2.85713
offset_bottom = 51.2857
theme_override_font_sizes/font_size = 35
text = "-"
script = ExtResource("18_sppb3")

[node name="coral4" type="Label" parent="QR_Number"]
layout_mode = 0
offset_left = 862.857
offset_top = -122.714
offset_right = 886.86
offset_bottom = -73.714
theme_override_font_sizes/font_size = 35
text = "0"

[node name="Add" type="Button" parent="QR_Number/coral4"]
layout_mode = 0
offset_left = 51.4286
offset_top = -4.0
offset_right = 79.4286
offset_bottom = 53.0
theme_override_font_sizes/font_size = 35
text = "+"
script = ExtResource("19_dotxe")

[node name="Subtract" type="Button" parent="QR_Number/coral4"]
layout_mode = 0
offset_left = -30.8571
offset_top = -5.71428
offset_right = -2.85713
offset_bottom = 51.2857
theme_override_font_sizes/font_size = 35
text = "-"
script = ExtResource("20_8t3s4")

[node name="Speakeratt" type="Label" parent="QR_Number"]
layout_mode = 0
offset_left = 721.857
offset_top = -124.714
offset_right = 745.86
offset_bottom = -75.714
theme_override_font_sizes/font_size = 35
text = "0"

[node name="Add" type="Button" parent="QR_Number/Speakeratt"]
layout_mode = 0
offset_left = 51.4286
offset_top = -4.0
offset_right = 79.4286
offset_bottom = 53.0
theme_override_font_sizes/font_size = 35
text = "+"
script = ExtResource("19_febcr")

[node name="Subtract" type="Button" parent="QR_Number/Speakeratt"]
layout_mode = 0
offset_left = -30.8571
offset_top = -5.71428
offset_right = -2.85713
offset_bottom = 51.2857
theme_override_font_sizes/font_size = 35
text = "-"
script = ExtResource("20_yoeih")

[node name="csv exporter" type="Button" parent="."]
offset_left = 867.0
offset_top = 521.0
offset_right = 1105.0
offset_bottom = 602.0
text = "SAVE
(export as .csv file)"
script = ExtResource("17_tvd87")

[node name="back button" type="Button" parent="."]
texture_filter = 1
offset_left = 18.0
offset_top = 16.0
offset_right = 1050.0
offset_bottom = 280.0
scale = Vector2(0.25, 0.25)
theme_type_variation = &"FlatButton"
theme_override_font_sizes/font_size = 48
text = "BACK 
(SAVE FIRST)"
icon = ExtResource("18_preh0")
icon_alignment = 1
script = ExtResource("18_2bqcg")

[connection signal="toggled" from="QR_Number/Parked" to="QR_Number/QRnum" method="_on_parked_toggled"]
[connection signal="toggled" from="QR_Number/Spotlit" to="QR_Number/QRnum" method="_on_spotlit_toggled"]
[connection signal="text_changed" from="QR_Number/Defense_Rating" to="QR_Number/Defense_Rating" method="_on_text_changed"]
[connection signal="toggled" from="QR_Number/Area_left" to="QR_Number/QRnum" method="_on_area_left_toggled"]
[connection signal="text_changed" from="QR_Number/Mnum" to="QR_Number/Mnum" method="_on_text_changed"]
[connection signal="pressed" from="QR_Number/Aamp/Add" to="QR_Number/Aamp/Add" method="_on_pressed"]
[connection signal="pressed" from="QR_Number/Aamp/Subtract" to="QR_Number/Aamp/Subtract" method="_on_pressed"]
[connection signal="pressed" from="QR_Number/Aspeaker/Add" to="QR_Number/Aspeaker/Add" method="_on_pressed"]
[connection signal="pressed" from="QR_Number/Aspeaker/Subtract" to="QR_Number/Aspeaker/Subtract" method="_on_pressed"]
[connection signal="pressed" from="QR_Number/Amp/Add" to="QR_Number/Amp/Add" method="_on_pressed"]
[connection signal="pressed" from="QR_Number/Amp/Subtract" to="QR_Number/Amp/Subtract" method="_on_pressed"]
[connection signal="pressed" from="QR_Number/Source_Intake/Add" to="QR_Number/Source_Intake/Add" method="_on_pressed"]
[connection signal="pressed" from="QR_Number/Source_Intake/Subtract" to="QR_Number/Source_Intake/Subtract" method="_on_pressed"]
[connection signal="pressed" from="QR_Number/Ground_Intake/Add" to="QR_Number/Ground_Intake/Add" method="_on_pressed"]
[connection signal="pressed" from="QR_Number/Ground_Intake/Subtract" to="QR_Number/Ground_Intake/Subtract" method="_on_pressed"]
[connection signal="pressed" from="QR_Number/Speaker/Add" to="QR_Number/Speaker/Add" method="_on_pressed"]
[connection signal="pressed" from="QR_Number/Speaker/Subtract" to="QR_Number/Speaker/Subtract" method="_on_pressed"]
[connection signal="toggled" from="QR_Number/trap" to="QR_Number/QRnum" method="_on_trap_toggled"]
[connection signal="toggled" from="QR_Number/AllianceToggle" to="QR_Number/QRnum" method="_on_alliance_toggle_toggled"]
[connection signal="pressed" from="QR_Number/AAttempted/Add" to="QR_Number/AAttempted/Add" method="_on_pressed"]
[connection signal="pressed" from="QR_Number/AAttempted/Subtract" to="QR_Number/AAttempted/Subtract" method="_on_pressed"]
[connection signal="pressed" from="QR_Number/Ampatt/Add" to="QR_Number/Ampatt/Add" method="_on_pressed"]
[connection signal="pressed" from="QR_Number/Ampatt/Subtract" to="QR_Number/Ampatt/Subtract" method="_on_pressed"]
[connection signal="pressed" from="QR_Number/coral4/Add" to="QR_Number/coral4/Add" method="_on_pressed"]
[connection signal="pressed" from="QR_Number/coral4/Subtract" to="QR_Number/coral4/Subtract" method="_on_pressed"]
[connection signal="pressed" from="QR_Number/Speakeratt/Add" to="QR_Number/Speakeratt/Add" method="_on_pressed"]
[connection signal="pressed" from="QR_Number/Speakeratt/Subtract" to="QR_Number/Speakeratt/Subtract" method="_on_pressed"]
[connection signal="pressed" from="csv exporter" to="csv exporter" method="_on_pressed"]
[connection signal="pressed" from="back button" to="back button" method="_on_pressed"]
